tdf#116301: write correct content type for diagramDrawing

According to MS-ODRAWXML the correct one is:
application/vnd.ms-office.drawingml.diagramDrawing+xml

Change-Id: If988ad234742da42634a52bbe176dbb5b763af46